Changed Joomla Bible Study to Proclaim. Updated main control panel image and menu image.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -3,7 +3,7 @@
 ; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-; Note: This is the common language file for all Bible Study components, plugins and modules.
+; Note: This is the common language file for all Proclaim components, plugins and modules.
 ;       It is used for both frontend and backend.
 ;       Plugins and modules use some additional .sys.ini files for core definitions.
 ;           In backend settings page they use xml field loadlanguagefile in the path
@@ -13,10 +13,10 @@
 ;               $language->load('com_biblestudy', JPATH_COMPONENT_ADMINISTRATOR, 'en-GB', true);  // default english phrases
 ;               $language->load('com_biblestudy', JPATH_COMPONENT_ADMINISTRATOR, null, true);     // target language
 
-COM_BIBLESTUDY="Joomla Bible Study"
+COM_BIBLESTUDY="Proclaim"
 
 ;; Permission entry and Joomla common handling
-COM_BIBLESTUDY_CONFIGURATION="BibleStudy CONFIGURATION"
+COM_BIBLESTUDY_CONFIGURATION="Proclaim CONFIGURATION"
 COM_BIBLESTUDY_N_ITEMS_ARCHIVED="%d Item(s) Archived"
 COM_BIBLESTUDY_N_ITEMS_DELETED="%d Item(s) Deleted"
 COM_BIBLESTUDY_N_ITEMS_PUBLISHED="%d item(s) published"
@@ -41,7 +41,7 @@ JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
 JBS_SHOW_DOWNLOAD_BUTTON="Global Show Download"
 JBS_SHOW_DOWNLOAD_BUTTON_DESC="Set to yes if you want the download icon to show by default in media files. Individual media file record will override this setting"
 PLG_SEARCH_BIBLESTUDYSEARCH_BIBLESTUDYSEARCH="Bible Studies"
-JBS_CPANEL_DESC_WELCOME="Welcome to Joomla Bible Study"
+JBS_CPANEL_DESC_WELCOME="Welcome to Proclaim"
 JBS_CMN_CENTER="Center"
 JBS_CMN_LEFT="Left"
 JBS_CMN_RIGHT="Right"
@@ -117,7 +117,7 @@ JBS_CMN_INSTALL="Install"
 JBS_CMN_INTERNAL_PLAYER="Internal Player"
 JBS_CMN_ITEM_NOT_PUBLISHED="Item not published"
 JBS_CMN_ITEM_PUBLISHED="Published"
-JBS_CMN_JOOMLA_BIBLE_STUDY="Joomla Bible Study"
+JBS_CMN_JOOMLA_BIBLE_STUDY="Proclaim"
 JBS_CMN_LANDING_SHOW="Show on Landing Page"
 JBS_CMN_LANDING_SHOW_DESC="Choose whether to hide this item on the Landing Page, or wether to show it above or below the "_QQ_"more"_QQ_" button. Must also set this under Templates/Landing Page"
 JBS_CMN_LEGACY_PLAYER="Internal Audio Player"
@@ -156,7 +156,7 @@ JBS_CMN_ORDERING="Ordering"
 JBS_CMN_ORDERING_DESC="Choose an order for this item on the displayed list"
 JBS_CMN_OVER="Over"
 JBS_CMN_PARAMETERS="Parameters"
-JBS_CMN_PHP_ERROR="Your host needs to use PHP %s or higher to run Joomla Bible Study"
+JBS_CMN_PHP_ERROR="Your host needs to use PHP %s or higher to run Proclaim"
 JBS_CMN_PLAYS="Plays"
 JBS_CMN_PODCAST="Podcast"
 JBS_CMN_PODCASTS="Podcasts"
@@ -326,7 +326,7 @@ JBS_ADM_FORMAT_POPULAR="Set Items to include in score"
 JBS_ADM_FORMAT_POPULAR_DESC="Decide what items will determine the score of a popular study"
 JBS_ADM_FULL_WINDOW="Full Body of the Window"
 JBS_ADM_HITS_PLAYS_DOWNLOAD="Hits + Plays + Downloads"
-JBS_ADM_INTERNAL_SHARE="BibleStudy internal Sharing"
+JBS_ADM_INTERNAL_SHARE="Proclaim internal Sharing"
 JBS_ADM_JWPLAYER="JW Player"
 JBS_ADM_JWPLAYER_ADOBE_SITECATALYST="Adobe SiteCatalyst"
 JBS_ADM_JWPLAYER_ADOBE_SITECATALYST_DESC="Configures the Adobe SiteCatalyst connection for the Premium and Ads editions."
@@ -578,7 +578,7 @@ JBS_CPL_PIM_DESC="Please look at post installation massages as you have addition
 JBS_CPL_PIM_BUTTON="Go to PostMessages"
 JBS_CPL_PIM_ERROR_TITLE="Error in Installation"
 JBS_CPL_PIM_ERROR_DESC="There is a error in installation; please look at documentation to see how to fix."
-JBS_CPL_PIM_ERROR_BUTTON="Error : Joomla Bible Study Documentation"
+JBS_CPL_PIM_ERROR_BUTTON="Error : Proclaim Documentation"
 
 ;; IBM Install, Backup, Migrate
 JBS_SUCCESS="records changed"
@@ -608,11 +608,11 @@ JBS_IBM_INSTALLDB_ERRORS="Error installing the database"
 JBS_IBM_MAX_EXECUTION_TIME="Maximum script execution time in seconds (large database may not have time to import)"
 JBS_IBM_MAX_UPLOAD="Maximum upload allowed in your php.ini file using post_max_size is"
 JBS_IBM_MEDIAFILES_CREATED="Mediafiles converted for"
-JBS_IBM_MIGRATE_NOT_OLD_DB="This file is for the current version of Joomla! Bible Study. Please use import."
+JBS_IBM_MIGRATE_NOT_OLD_DB="This file is for the current version of Proclaim. Please use import."
 JBS_IBM_NOTE_ERRORS="Please note any error messages below"
 JBS_IBM_NOT_CONVERTED="Not converted: "
-JBS_IBM_NOT_CURENT_DB="This file is not for the current version of Joomla! Bible Study. Please use Migration to upgrade from this file."
-JBS_IBM_NOT_DB="This is not a Bible Study SQL File. Please use this only for Bible Study SQL Files"
+JBS_IBM_NOT_CURENT_DB="This file is not for the current version of Proclaim. Please use Migration to upgrade from this file."
+JBS_IBM_NOT_DB="This is not a Proclaim SQL File. Please use this only for Proclaim SQL Files"
 JBS_IBM_NO_MINISTRIES="No ministries found to convert"
 JBS_IBM_NO_PODCASTS="No podcasts found to convert"
 JBS_IBM_NO_PREACHIT_FOUND="No version of PreachIt found"
@@ -642,7 +642,7 @@ JBS_IBM_SERIES_CONVERTED="Series converted"
 JBS_IBM_SERMONS_CREATED_FOR="Sermons converted for"
 JBS_IBM_SERVER_RECORD_ADDED="Server Record Added"
 JBS_IBM_SHOW_JBSMIGRATION_LABEL="Show Migration Tab"
-JBS_IBM_SHOW_JBSMIGRATION_LABEL_DESC="Choose whether or not to show the tab that allows you to migrate from Joomla 1.5 versions of Joomla Bible Study. This should only need to be shown once"
+JBS_IBM_SHOW_JBSMIGRATION_LABEL_DESC="Choose whether or not to show the tab that allows you to migrate from Joomla 1.5 versions of Proclaim. This should only need to be shown once"
 JBS_IBM_TEACHERS_CREATED="Teachers converted"
 JBS_IBM_VERSION_TOO_OLD="You must upgrade to at least JBS version 6.0.8 to migrate. Please contact customer service at www.joomlabiblestudy.org"
 JBS_LBL_REDIRECT_IN_3S="Will Redirect in 3s"
@@ -655,37 +655,37 @@ JBS_LBL_AUTOCLOSE_IN_3S="Window will close in 3s"
 ;; INS Install -> also see xx-XX.com_biblestudy.sys.ini
 ; Install strings   ; duplicate? see IBM
 JBS_INS_DATABASE_SCHEMA_DOES_NOT_MATCH="Database schema (%s) does not match current version (%s)"
-JBS_INS_INSTALLATION_RESULTS="Joomla BibleStudy Results - %s"
+JBS_INS_INSTALLATION_RESULTS="Joomla Proclaim Results - %s"
 JBS_INS_WARNING_INSTALL="You have tryed to access a page that is not permitted"
-JBS_INS_XML_DESCRIPTION="Joomla Bible Study"
-JBS_INS__MSG_DATABASE_UPDATEVERSION_ERROR="Database update version (%s) does not match Joomla! Bible Study version (%s)."
+JBS_INS_XML_DESCRIPTION="Proclaim"
+JBS_INS__MSG_DATABASE_UPDATEVERSION_ERROR="Database update version (%s) does not match Proclaim version (%s)."
 
 ; Preflight and postflight strings   ; duplicate? see IBM
 JBS_INS_CLICK_TO_FINISH="Click Here To Finish"
 JBS_INS_ERROR_SQL_READBUFFER="Could not read the sql file"
-JBS_INS_GET_MORE_HELP="Get more help and information at JoomlaBibleStudy.org"
+JBS_INS_GET_MORE_HELP="Get more help and information at ChristianWebMinistries.org"
 JBS_INS_RESETDB="Reset Database to Defaults"
 JBS_INS_SQL_UPDATE_ERRORS="Errors Parsing the SQL Update files: %s"
-JBS_INS_TITLE="Joomla! Bible Study"
+JBS_INS_TITLE="Proclaim"
 JBS_INS_VISIT_DOCUMENTATION="Visit our Documentation Site"
 JBS_INS_VISIT_FORUM="Visit our forum with your questions"
 
 ; PostInstall Messages
 JBS_POSTINSTALL_TITLE_TEMPLATE="Template Upgrade"
-JBS_POSTINSTALL_BODY_TEMPLATE="Version 9.x of Joomla Bible Study uses the native Bootstrap system to create responsive views. You MUST reconfigure your views for this version. In order to implement this on your website, go to Templates and open the default record. Choose what items you want to display, the html styling (9.x uses your site template css), and spans in the items to display according to how wide you want them. Span1 is 1/12 of the width of the screen; Span12 is the entire width."
+JBS_POSTINSTALL_BODY_TEMPLATE="Version 9.x of Proclaim uses the native Bootstrap system to create responsive views. You MUST reconfigure your views for this version. In order to implement this on your website, go to Templates and open the default record. Choose what items you want to display, the html styling (9.x uses your site template css), and spans in the items to display according to how wide you want them. Span1 is 1/12 of the width of the screen; Span12 is the entire width."
 JBS_POSTINSTALL_ACTION_TEMPLATE="Update Template Settings"
 
 ; Uninstall strings (used when the extension is uninstalled)   ; duplicate? see IBM
-JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove Bible Study Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
-JBS_INS_UNINSTALLED="Joomla Bible Study Uninstalled. Be sure to uninstall the module and plugin as well."
+JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove Proclaim Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
+JBS_INS_UNINSTALLED="Proclaim Uninstalled. Be sure to uninstall the module and plugin as well."
 
 ;Migration   ; duplicate? see IBM
 JBS_MIG_FINISHED="Finished"
-JBS_MIG_MIGRATION_DONE="Joomla Bible Study Migration - Finished."
+JBS_MIG_MIGRATION_DONE="Proclaim Migration - Finished."
 JBS_MIG_PROCESSING="Processing:"
-JBS_MIG_TITLE="Joomla Bible Study Migration"
+JBS_MIG_TITLE="Proclaim Migration"
 JBS_MIG_STARTING="Starting"
-JBS_MIG_WORKING="Joomla Bible Study Migration - still working"
+JBS_MIG_WORKING="Proclaim Migration - still working"
 
 ;; LOC Locations
 JBS_LOC_LOCATION_NAME="Location Name"
@@ -711,7 +711,7 @@ JBS_MDL_OR="OR"
 JBS_MDL_SELECT_TEMPLATE="Template for this page"
 JBS_MDL_SELECT_TEMPLATE_DESC="Choose a template for your page"
 JBS_MDL_SHOW_COMPONENT="Show/Hide component link"
-JBS_MDL_SHOW_COMPONENT_DESC="Choose whether to show or hide a link to the main Bible Study component at the bottom of the module display"
+JBS_MDL_SHOW_COMPONENT_DESC="Choose whether to show or hide a link to the main Proclaim component at the bottom of the module display"
 JBS_MDL_TEMPLATE="Template File"
 JBS_MDL_TEMPLATE_DESC="Choose a template file you created in the Admin/Template Files area or choose default"
 JBS_MDL_TOOLTIP="ToolTip Options"
@@ -925,7 +925,7 @@ JBS_PDC_XML_TTITLE="XML File"
 JBS_PDC_XML="XML"
 
 ;; PLG Plugin specific strings (all plugins)
-PLG_JBSBACKUP_HEADER="Your site's Joomla Bible Study database backup"
+PLG_JBSBACKUP_HEADER="Your site's Proclaim database backup"
 JBS_PLG_BACKUP_EMAIL_MSG_ERROR="Errors in backup process"
 JBS_PLG_BACKUP_EMAIL_MSG_SUCCESS="Backup was successful"
 JBS_PLG_BACKUP_FILES="Number of backup files to keep"
@@ -1021,7 +1021,7 @@ JBS_SHR_SOCIAL_NETWORK="Social Network"
 JBS_SHR_TOTALCHARACTERS="Total Characters"
 JBS_SHR_TOTALCHARACTERS_DESC="Total characters for string not including the path to the site."
 JBS_SHR_USERNAME="Enter your bit.ly username if you have one"
-JBS_SHR_USERNAME_DESC="This is not required. If left blank you will use JoomlaBibleStudy's user name"
+JBS_SHR_USERNAME_DESC="This is not required. If left blank you will use Proclaim's user name"
 JBS_SHR_USE_BITLY="Use link shortener bit.ly"
 JBS_SHR_USE_BITLY_DESC="Shortens the link. Helps mainly for services like Twitter that only take a certain number of characters"
 
@@ -1149,51 +1149,51 @@ JBS_TCH_TWITTER_DESC="Enter a full url link to the teacher's Twitter feed starti
 JBS_TCH_WEBSITE="Website"
 
 ;; TITLE Title Block
-JBS_TITLE_ADMINISTRATION="Joomla! Bible Study: Administration"
-JBS_TITLE_COMMENTS="Joomla! Bible Study: Comments"
-JBS_TITLE_COMMENT_CREATING="Joomla! Bible Study: Comment New"
-JBS_TITLE_COMMENT_EDITING="Joomla! Bible Study: Comment Edit ID#%s"
-JBS_TITLE_CONTROL_PANEL="Joomla! Bible Study: Control Panel"
-JBS_TITLE_INSTALL="Joomla! Bible Study: %s for %s"
-JBS_TITLE_LOCATIONS="Joomla! Bible Study: Locations"
-JBS_TITLE_LOCATIONS_CREATING="Joomla! Bible Study: Locations New"
-JBS_TITLE_LOCATIONS_EDITING="Joomla! Bible Study: Locations Edit %s"
-JBS_TITLE_MEDIA_FILES="Joomla! Bible Study: Media Files"
-JBS_TITLE_MEDIA_FILES_CREATING="Joomla! Bible Study: Media Files New"
-JBS_TITLE_MEDIA_FILES_EDITING="Joomla! Bible Study: Media Files Edit %s"
-JBS_TITLE_MESSAGETYPES="Joomla! Bible Study: Message Type"
-JBS_TITLE_MESSAGETYPES_CREATING="Joomla! Bible Study: Message Type New"
-JBS_TITLE_MESSAGETYPES_EDITING="Joomla! Bible Study: Message Type Edit %s"
-JBS_TITLE_PODCASTS="Joomla! Bible Study: Podcasts"
-JBS_TITLE_PODCAST_CREATING="Joomla! Bible Study: Podcast New"
-JBS_TITLE_PODCAST_EDITING="Joomla! Bible Study: Podcast Edit %s"
-JBS_TITLE_SERIES="Joomla! Bible Study: Series"
-JBS_TITLE_SERIES_CREATING="Joomla! Bible Study: Series New"
-JBS_TITLE_SERIES_EDITING="Joomla! Bible Study: Series Edit %s"
-JBS_TITLE_SERVERS="Joomla! Bible Study: Servers"
-JBS_TITLE_SERVERS_CREATING="Joomla! Bible Study: Servers New"
-JBS_TITLE_SERVERS_EDITING="Joomla! Bible Study: Servers Edit %s"
-JBS_TITLE_SOCIAL_NETWORKING_LINKS="Joomla! Bible Study: Social Networking Links"
-JBS_TITLE_SOCIAL_NETWORKING_LINKS_CREATING="Joomla! Bible Study: Social Networking Links New"
-JBS_TITLE_SOCIAL_NETWORKING_LINKS_EDITING="Joomla! Bible Study: Social Networking Links Edit %s"
-JBS_TITLE_STUDIES="Joomla! Bible Study: Studies"
-JBS_TITLE_STUDIES_CREATING="Joomla! Bible Study: Studies New"
-JBS_TITLE_STUDIES_EDITING="Joomla! Bible Study: Studies Edit %s"
-JBS_TITLE_STYLES="Joomla! Bible Study: Styles"
-JBS_TITLE_STYLES_CREATING="Joomla! Bible Study: Styles New"
-JBS_TITLE_STYLES_EDITING="Joomla! Bible Study: Styles Edit File: %s"
-JBS_TITLE_TEACHERS="Joomla! Bible Study: Teachers"
-JBS_TITLE_TEACHER_CREATING="Joomla! Bible Study: Teacher New"
-JBS_TITLE_TEACHER_EDITING="Joomla! Bible Study: Teacher Edit %s"
-JBS_TITLE_TEMPLATECODES="Joomla! Bible Study: Template Codes"
-JBS_TITLE_TEMPLATECODES_CREATING="Joomla! Bible Study: Template Code New"
-JBS_TITLE_TEMPLATECODES_EDITING="Joomla! Bible Study: Template Code Edit %s"
-JBS_TITLE_TEMPLATES="Joomla! Bible Study: Templates"
-JBS_TITLE_TEMPLATES_CREATING="Joomla! Bible Study: Templates New"
-JBS_TITLE_TEMPLATES_EDITING="Joomla! Bible Study: Templates Edit %s"
-JBS_TITLE_TOPICS="Joomla! Bible Study: Topics"
-JBS_TITLE_TOPICS_CREATING="Joomla! Bible Study: Topics New"
-JBS_TITLE_TOPICS_EDITING="Joomla! Bible Study: Topics Edit %s"
+JBS_TITLE_ADMINISTRATION="Proclaim: Administration"
+JBS_TITLE_COMMENTS="Proclaim: Comments"
+JBS_TITLE_COMMENT_CREATING="Proclaim: Comment New"
+JBS_TITLE_COMMENT_EDITING="Proclaim: Comment Edit ID#%s"
+JBS_TITLE_CONTROL_PANEL="Proclaim: Control Panel"
+JBS_TITLE_INSTALL="Proclaim: %s for %s"
+JBS_TITLE_LOCATIONS="Proclaim: Locations"
+JBS_TITLE_LOCATIONS_CREATING="Proclaim: Locations New"
+JBS_TITLE_LOCATIONS_EDITING="Proclaim: Locations Edit %s"
+JBS_TITLE_MEDIA_FILES="Proclaim: Media Files"
+JBS_TITLE_MEDIA_FILES_CREATING="Proclaim: Media Files New"
+JBS_TITLE_MEDIA_FILES_EDITING="Proclaim: Media Files Edit %s"
+JBS_TITLE_MESSAGETYPES="Proclaim: Message Type"
+JBS_TITLE_MESSAGETYPES_CREATING="Proclaim: Message Type New"
+JBS_TITLE_MESSAGETYPES_EDITING="Proclaim: Message Type Edit %s"
+JBS_TITLE_PODCASTS="Proclaim: Podcasts"
+JBS_TITLE_PODCAST_CREATING="Proclaim: Podcast New"
+JBS_TITLE_PODCAST_EDITING="Proclaim: Podcast Edit %s"
+JBS_TITLE_SERIES="Proclaim: Series"
+JBS_TITLE_SERIES_CREATING="Proclaim: Series New"
+JBS_TITLE_SERIES_EDITING="Proclaim: Series Edit %s"
+JBS_TITLE_SERVERS="Proclaim: Servers"
+JBS_TITLE_SERVERS_CREATING="Proclaim: Servers New"
+JBS_TITLE_SERVERS_EDITING="Proclaim: Servers Edit %s"
+JBS_TITLE_SOCIAL_NETWORKING_LINKS="Proclaim: Social Networking Links"
+JBS_TITLE_SOCIAL_NETWORKING_LINKS_CREATING="Proclaim: Social Networking Links New"
+JBS_TITLE_SOCIAL_NETWORKING_LINKS_EDITING="Proclaim: Social Networking Links Edit %s"
+JBS_TITLE_STUDIES="Proclaim: Studies"
+JBS_TITLE_STUDIES_CREATING="Proclaim: Studies New"
+JBS_TITLE_STUDIES_EDITING="Proclaim: Studies Edit %s"
+JBS_TITLE_STYLES="Proclaim: Styles"
+JBS_TITLE_STYLES_CREATING="Proclaim: Styles New"
+JBS_TITLE_STYLES_EDITING="Proclaim: Styles Edit File: %s"
+JBS_TITLE_TEACHERS="Proclaim: Teachers"
+JBS_TITLE_TEACHER_CREATING="Proclaim: Teacher New"
+JBS_TITLE_TEACHER_EDITING="Proclaim: Teacher Edit %s"
+JBS_TITLE_TEMPLATECODES="Proclaim: Template Codes"
+JBS_TITLE_TEMPLATECODES_CREATING="Proclaim: Template Code New"
+JBS_TITLE_TEMPLATECODES_EDITING="Proclaim: Template Code Edit %s"
+JBS_TITLE_TEMPLATES="Proclaim: Templates"
+JBS_TITLE_TEMPLATES_CREATING="Proclaim: Templates New"
+JBS_TITLE_TEMPLATES_EDITING="Proclaim: Templates Edit %s"
+JBS_TITLE_TOPICS="Proclaim: Topics"
+JBS_TITLE_TOPICS_CREATING="Proclaim: Topics New"
+JBS_TITLE_TOPICS_EDITING="Proclaim: Topics Edit %s"
 JBS_TITLE_UPLOAD_FORM="Upload Media File"
 
 ;; Topic Items
@@ -1409,7 +1409,7 @@ JBS_TPL_HOURS_MIN_SEC_COLON="H:M:S"
 JBS_TPL_HOURS_MIN_SEC_SLASH="Hours/min/sec"
 JBS_TPL_IMPORT_EXPORT_TEMPLATE="Import/Export Templates"
 JBS_TPL_IMPORT_SUCCESS="Template import complete. Note any error messages above"
-JBS_TPL_JBS_COMMENTS="Joomla Bible Study Comments"
+JBS_TPL_JBS_COMMENTS="Proclaim Comments"
 JBS_TPL_JCOMMENTS="Use JComments - Must be installed"
 JBS_TPL_LABEL_ONLY="Label Only"
 JBS_TPL_LANDINGPAGE_BOOKSLABEL="Books Label"
