--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
@@ -5,27 +5,27 @@
 
 
 ; Identify the component as extension
-COM_BIBLESTUDY="Bible Study"
+COM_BIBLESTUDY="Proclaim"
 
 ; Name of the component
-JBS_CMN_COM_BIBLESTUDY="Bible Study"
+JBS_CMN_COM_BIBLESTUDY="Proclaim"
 
 ; Install strings
 JBS_INS_ERROR_SQL_READBUFFER="Could not read the sql file"
-JBS_INS_XML_DESCRIPTION="Joomla Bible Study"
-JBS_INS_INSTALLATION_RESULTS="Joomla BibleStudy Results"
+JBS_INS_XML_DESCRIPTION="Proclaim"
+JBS_INS_INSTALLATION_RESULTS="Proclaim Results"
 JBS_INS_FAILURE="Failed to set up database"
 
 ; Preflight and postflight strings
-JBS_INS_GET_MORE_HELP="Get more help and information at JoomlaBibleStudy.org"
+JBS_INS_GET_MORE_HELP="Get more help and information at ChristianWebMinistries.org"
 JBS_INS_VISIT_DOCUMENTATION="Visit our Documentation Site"
 JBS_INS_VISIT_FORUM="Visit our forum with your questions"
 JBS_INS_CLICK_TO_FINISH="Click Here To Finish"
-JBS_INS_TITLE="Joomla! Bible Study"
+JBS_INS_TITLE="Proclaim"
 
 ; Uninstall strings (used when the extension is uninstalled)
-JBS_INS_UNINSTALLED="Joomla Bible Study Uninstalled. Be sure to uninstall the module and plugins as well."
-JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove Bible Study Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
+JBS_INS_UNINSTALLED="Proclaim Uninstalled. Be sure to uninstall the module and plugins as well."
+JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove Proclaim Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
 
 ; Menue entries
 JBS_MNU_ADMINISTRATION="Administration"
@@ -51,7 +51,7 @@ JBS_MNU_TOPICS="Topics"
 JBS_MNU_COMMENTS_LIST_EDIT_LAYOUT="Administer Comments"
 JBS_MNU_COMMENTS_LIST_EDIT_LAYOUT_DESC="Create a link to the Administration Comments Page"
 JBS_MNU_LANDING_PAGE_LAYOUT="Landing Page Layout"
-JBS_MNU_LANDING_PAGE_LAYOUT_DESC="Create a link to the main Bible Studies List Page"
+JBS_MNU_LANDING_PAGE_LAYOUT_DESC="Create a link to the main Proclaim List Page"
 JBS_MNU_LATEST_STUDY_LAYOUT="Latest Study Details Link"
 JBS_MNU_LATEST_STUDY_LAYOUT_DESC="Creates a link to the details view of your latest study automatically"
 JBS_MNU_MEDIAFILES_LIST_LAYOUT="FOR ADMIN of Media Files"
