--- a/mod_biblestudy/language/en-GB/en-GB.mod_biblestudy.sys.ini
+++ b/mod_biblestudy/language/en-GB/en-GB.mod_biblestudy.sys.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-MOD_BIBLESTUDY="Bible Study Module"
-JBS_MDL_BIBLESTUDY="Bible Study Module"
+MOD_BIBLESTUDY="Proclaim Module"
+JBS_MDL_BIBLESTUDY="Proclaim Module"
 JBS_MDL_BIBLESTUDY_XML_DESCRIPTION="This module displays a list of studies. Component must be installed"
 JBS_MDL_DESCRIPTION="This module displays a list of studies. Component must be installed."
