--- a/mod_biblestudy_podcast/language/en-GB/en-GB.mod_biblestudy_podcast.ini
+++ b/mod_biblestudy_podcast/language/en-GB/en-GB.mod_biblestudy_podcast.ini
@@ -4,6 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-JBS_MDL_PODCAST="Bible Study Podcast Subscribe"
+JBS_MDL_PODCAST="Proclaim Podcast Subscribe"
 JBS_MDL_PODCAST_XML_DESCRIPTION="This module displays a list of podcast. Component must be installed."
-MOD_BIBLESTUDY_PODCAST="Bible Study Podcast Subscribe"
+MOD_BIBLESTUDY_PODCAST="Proclaim Podcast Subscribe"
