--- a/plg_biblestudy_search/language/en-GB/en-GB.plg_search_biblestudysearch.sys.ini
+++ b/plg_biblestudy_search/language/en-GB/en-GB.plg_search_biblestudysearch.sys.ini
@@ -4,6 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-JBS_PLG_SEARCH="Search - Bible Study"
-JBS_PLG_SEARCH_XML_DESCRIPTION="Enables searching of Joomla Bible Study Component"
+JBS_PLG_SEARCH="Search - Proclaim"
+JBS_PLG_SEARCH_XML_DESCRIPTION="Enables searching of Proclaim Component"
 PLG_SEARCH_BIBLESTUDYSEARCH_BIBLESTUDYSEARCH="Bible Studies"
