--- a/mod_biblestudy/language/en-GB/en-GB.mod_biblestudy.ini
+++ b/mod_biblestudy/language/en-GB/en-GB.mod_biblestudy.ini
@@ -5,7 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 ; Note : This is only the module form specific language file in the backend. For common definition see component language file
 
-MOD_BIBLESTUDY="Bible Study Module"
-JBS_MDL_BIBLESTUDY="Bible Study Module"
+MOD_BIBLESTUDY="Proclaim Module"
+JBS_MDL_BIBLESTUDY="Proclaim Module"
 JBS_MDL_BIBLESTUDY_XML_DESCRIPTION="This module displays a list of studies. Component must be installed"
 JBS_MDL_DESCRIPTION="This module displays a list of studies. Component must be installed."
