--- a/plg_biblestudy_podcast/language/en-GB/en-GB.plg_system_jbspodcast.sys.ini
+++ b/plg_biblestudy_podcast/language/en-GB/en-GB.plg_system_jbspodcast.sys.ini
@@ -1,11 +1,11 @@
 ; $Id: en-GB.plg_system_jbspodcast.sys.ini  2011-04-27 02:40:25Z tomfuller $
-; Joomla Bible Study
-; Copyright (C) 2007 - 2015 Joomla Bible Study. All rights reserved.
+; Proclaim
+; Copyright (C) 2007 - 2015 Proclaim. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-JBS_PLG_PODCAST="System - Bible Study Podcast"
-JBS_PLG_PODCAST_XML_DESCRIPTION="Automatic publishing of podcast file for Joomla Bible Study Component"
+JBS_PLG_PODCAST="System - Proclaim Podcast"
+JBS_PLG_PODCAST_XML_DESCRIPTION="Automatic publishing of podcast file for Proclaim Component"
 
-JBS_PLG_PODCAST_UNINSTALL_TEXT="Joomla Bible Study Podcast Plugin successfully uninstalled"
-JBS_PLG_PODCAST_UPDATE_TEXT="Joomla Bible Study Podcast Plugin successfully updated"
+JBS_PLG_PODCAST_UNINSTALL_TEXT="Proclaim Podcast Plugin successfully uninstalled"
+JBS_PLG_PODCAST_UPDATE_TEXT="Proclaim Podcast Plugin successfully updated"
