Missing language Strings

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
@@ -70,6 +70,9 @@ JBS_MNU_STUDIES_LIST_LAYOUT="Studies List Layout"
 JBS_MNU_STUDIES_LIST_LAYOUT_DESC="Create a link to the main Studies List Page"
 JBS_MNU_TEACHERS_LIST_LAYOUT="Teachers List Layout"
 JBS_MNU_TEACHERS_LIST_LAYOUT_DESC="Create a link to the main Teachers List Page"
+JBS_MNU_PODCASTS_LIST_EDIT_LAYOUT="Podcast List Edit Layout"
+JBS_MNU_PODCASTS_LIST_LAYOUT="Podcast Options"
+JBS_MNU_PODCASTS_LIST_LAYOUT_DESC="Options for List layout"
 
 JBS_MNU_SELECT_SERIES_DESC="Choose a single series to link to"
 JBS_MNU_SELECT_STUDY_DESC="Choose a single study to link to"
