Added missing string

--- a/plg_biblestudy_search/language/en-GB/en-GB.plg_search_biblestudysearch.sys.ini
+++ b/plg_biblestudy_search/language/en-GB/en-GB.plg_search_biblestudysearch.sys.ini
@@ -7,3 +7,4 @@
 JBS_PLG_SEARCH="Search - Proclaim"
 JBS_PLG_SEARCH_XML_DESCRIPTION="Enables searching of Proclaim Component"
 PLG_SEARCH_BIBLESTUDYSEARCH_BIBLESTUDYSEARCH="Bible Studies"
+JBS_PLG_SEARCH_BIBLESTUDYSEARCH="Sermons"
