Moving to new look.

--- a/com_biblestudy/admin/addons/servers/youtube/language/en-GB/en-GB.jbs_addon_youtube.ini
+++ b/com_biblestudy/admin/addons/servers/youtube/language/en-GB/en-GB.jbs_addon_youtube.ini
@@ -1,7 +1,7 @@
 JBS_ADDON_YOUTUBE_DETAILS="Details"
 JBD_ADDON_YOUTUBE_FILE_LINKER="File Linker"
 JBS_ADDON_YOUTUBE_FILE_SETTINGS="File Settings"
-JBS_ADDON_YOUTUBE_MEDIA_FILES="Media Files"
+JBS_ADDON_YOUTUBE_MEDIA_FILES="Youtube URL Settings"
 JBS_ADDON_YOUTUBE_UPLOAD="Upload"
 JBS_ADDON_YOUTUBE_MEDIA_TYPE="Media Type"
 JBS_ADDON_YOUTUBE_PARAMETERS="Parameters"
