--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -723,7 +723,8 @@ JBD_ADDON_LEGACY_FILE_LINKER="Link to File/Item"
 JBS_ADDON_LEGACY_MEDIA_FILES="Media File"
 JBS_ADDON_LEGACY_DETAILS="Server Details"
 JBS_ADDON_LEGACY_FILE_SETTINGS="File Settings"
-JBS_ADDON_LEGACY_MEDIA_TYPE="Default Media Settings"
+JBS_ADDON_LEGACY_MEDIA_TYPE="Media Settings"
+JBS_ADDON_LEGACY_MEDIA_TYPE_DEF="Default Media Settings"
 JBS_ADDON_LEGACY_PARAMETERS="Server Parameters"
 JBS_ADDON_LEGACY_BUTTON_COLOR="Custon button color"
 JBS_ADDON_LEGACY_BUTTON_COLOR_DESC="Pick a color for the background of the button"
