Update to show new sort JS and moving to help clean up code.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -818,7 +818,7 @@ JBS_MED_MEDIA_POPUPMARGIN="Height Margin for Popup"
 JBS_MED_MEDIA_POPUPMARGIN_DESC="Set space above and below popup for header and footer. Affects only this file"
 JBS_MED_MEDIA_POPUPTITLE="Popup Title Elements"
 JBS_MED_MEDIA_POPUPTITLE_FOOTER_DESC="Overrides global settings. Use any html. Display Codes: {{teacherimage}}, {{title}}, {{studydate}}, {{teacher}}, {{filename}}, {{description}}, {{length}}, {{series}} {{series_thumbnail}}"
-JBS_MED_MEDIA_TYPE="Media Image and Type"
+JBS_MED_MEDIA_TYPE="Media Type"
 JBS_MED_NO_DOWNLOAD_ICON="No Download icon"
 JBS_MED_PATH="Server URL Path"
 JBS_MED_PATH_DESC="The Server URL Path to the url not including the http or https"
