Changed URLs to CWM website.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -435,7 +435,7 @@ JBS_ADM_MSG_DATABASE_UPDATEVERSION_ERROR="Database update version (%s) does not 
 JBS_ADM_MSG_DATABASE_UPDATEJBSMVERSION_ERROR="Database update table version (%s) does not match JBSM version (%s)."
 JBS_ADM__MSG_DATABASE_UPDATE_VERSION="Update version (in #__bsms_update): %s"
 JBS_ADM_UPLOAD_PATH="Upload Path:"
-JBS_ADM_UPLOAD_PATH_DESC="Path to where the files will be locatied from root of host website. like http://www.example.com/path..."
+JBS_ADM_UPLOAD_PATH_DESC="Path to where the files will be located from root of host website. like http://www.example.com/path..."
 
 ;; Archive
 JBS_ADM_ARCHIVE="Archive"
