Moved to new Icon Type Field system.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -735,7 +735,8 @@ JBS_MED_PLAY="MP3/Audio"
 JBS_MED_YOUTUBE="YouTube"
 JBS_MED_VIDEO="Video"
 JBS_MED_BROADCAST="Broadcast/Podcast"
-JBS_MED_FILE="PDF/File"
+JBS_MED_FILE="File"
+JBS_MED_FILE_PDF="PDF"
 JBS_MED_VIMEO="Vimeo"
 JBS_MED_BUTTON="Button"
 JBS_MED_TEXT="Text"
