Language files updated and local.xml

--- a/com_biblestudy/admin/addons/servers/local/language/en-GB/en-GB.jbs_addon_local.ini
+++ b/com_biblestudy/admin/addons/servers/local/language/en-GB/en-GB.jbs_addon_local.ini
@@ -1,4 +1,6 @@
 JBS_ADDON_LOCAL_BASE="Base URL"
+JBS_ADDON_LOCAL_DETAILS="Details"
+JBS_ADDON_LOCAL_PARAMETERS="Parameters"
 JBS_ADDON_LOCAL_MEDIA_PARAMETERS="Media Parameters"
 JBS_ADDON_LOCAL_UPLOAD="Upload"
 JBS_ADDON_LOCAL_UPLOAD_DESC="Upload here"
