Working on upgrade script with Language strings also.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -674,6 +674,8 @@ JBS_INS_VISIT_FORUM="Visit our forum with your questions"
 JBS_POSTINSTALL_TITLE_TEMPLATE="Template Upgrade"
 JBS_POSTINSTALL_BODY_TEMPLATE="Version 9.x of Proclaim uses the native Bootstrap system to create responsive views. You MUST reconfigure your views for this version. In order to implement this on your website, go to Templates and open the default record. Choose what items you want to display, the html styling (9.x uses your site template css), and spans in the items to display according to how wide you want them. Span1 is 1/12 of the width of the screen; Span12 is the entire width."
 JBS_POSTINSTALL_ACTION_TEMPLATE="Update Template Settings"
+JBS_POSTINSTALL_TITLE_FONTAWESOME="Font Awesome update to v5"
+JBS_POSTINSTALL_BODY_FONTAWESOME="We have updated Font Awesome to v5. We have place v4 backwords compadibility script to acomidate."
 
 ; Uninstall strings (used when the extension is uninstalled)   ; duplicate? see IBM
 JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove Proclaim Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
@@ -1766,3 +1768,25 @@ JBS_UPLOADER_START_UPLOADING_QUEUE="Start Uploading Queue"
 JBS_UPLOADER_STATUS="Status"
 JBS_UPLOADER_STOP_CURRENT_UPLOAD="Stop Current Upload"
 JBS_UPLOADER_STOP_UPLOAD="Stop Upload"
+
+;; Addon Languages test
+JBS_ADDON_PROTOCOL="Protocl"
+JBS_ADDON_PROTOCOL_DESC="Protocal of the server that needs to be used. http:// or https://, Default is (http://)"
+JBS_ADDON_MEDIA_TYPE_DEF="Default Media Settings"
+JBS_ADDON_BUTTON_COLOR="Custon button color"
+JBS_ADDON_BUTTON_COLOR_DESC="Pick a color for the background of the button"
+JBS_ADDON_MEDIA_USE_BUTTON="Use button/icon"
+JBS_ADDON_MEDIA_USE_BUTTON_DESC="Choose whether to use a button or an icon instead of an image. This will override an image chosen"
+JBS_ADDON_BUTTON_TYPE="Button color"
+JBS_ADDON_BUTTON_TYPE_DESC="Choose from the available colors that come from Bootstrap. Blue is Primary, No color is Link, Green is Success, Light blue is Info, Orange is Warning, and Red is Danger"
+JBS_ADDON_ICON_TYPE="Icon Type"
+JBS_ADDON_ICON_TYPE_DESC="Choose an icon type from a selected number of icons available in Joomla"
+JBS_ADDON_FONT_SIZE="Font Size (only numbers)"
+JBS_ADDON_FONT_SIZE_DESC="Type in a font size in whole numbers only. This will affect the size of the icon"
+JBS_ADDON_CUSTOM_ICON="Custom Icon"
+JBS_ADDON_CUSTOM_ICON_DESC="Use any of the FontAwesome icons with this format fa fa-facebook. See http://fontawesome.io/icons/"
+JBS_ADDON_BUTTON_TEXT="Button Text"
+JBS_ADDON_BUTTON_TEXT_DESC="If you choose only a button, enter text for that button"
+JBS_ADDON_DOWNLOAD_USE_BUTTON="Default Download Icon"
+JBS_ADDON_DOWNLOAD_USE_BUTTON_DESC="Choose whether to use a button/icon or image for the default download icon. Button/icon overrides image choice"
+
