Rewoarking the message view.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -1022,7 +1022,7 @@ JBS_STY_COMMENT_PUBLISHED="This comment has been published."
 JBS_STY_COMMENT_SUBMITTED="Comment Added"
 JBS_STY_COMMENT_UNPUBLISHED="Comment Submitted for Review"
 JBS_STY_CREATE_DATE_DESC="Date of the service or sermon"
-JBS_STY_DETAILS="Bible Study Details"
+JBS_STY_DETAILS="Study Details"
 JBS_STY_DOWNLOAD_LINK="Media File for Download Link"
 JBS_STY_DOWNLOAD_LINK_DESC="If you choose to link an item from the studies list you can use this file as that link-only to the download of that file"
 JBS_STY_ERROR_SUBMITTING_COMMENT="Error Submitting Comment"
