--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -268,6 +268,9 @@ JBS_CMN_PODCASTS_LIST="Podcast List"
 JBS_CMN_NO_PODCASTS="No Podcasts"
 JBS_CMN_MEDIA_RESPONSIVE="Responsive"
 JBS_CMN_LISTEN="Listen"
+JBS_CMN_CANT_ADDON_CLASS_NAME="Cannont find addon class neme %s"
+JBS_CMN_CANT_ADDON_LOAD_CLASS_NAME="Cannot load addon class name %s"
+JBS_CMN_COULD_NOT_LOAD_ADDON_CONFIGURATION="Could not load addon configuration"
 
 ;; ADM Administrator
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
