--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -410,6 +410,8 @@ JBS_ADM_SHARETYPE="Type of Social Media"
 JBS_ADM_SHARETYPE_DESC="Choose whether to use internal Share or addthis.com social media sharing. If using addthis, no configuration needed."
 JBS_ADM_SHOW_LOCATION_MEDIA="Show Location with Study on Media drop down"
 JBS_ADM_SHOW_LOCATION_MEDIA_DESC="Choose Show if you want the location information to show up with the study and date on the drop down in the mediafile edit view on the backend"
+JBS_ADM_SIMPLE_MODE="Simple Mode"
+JBS_ADM_SIMPLE_MODE_DESC="This option turns off and on the Proclaim Simple Mode. Simple mode has fewer options and dedicated site views. This is a good choice for sites where simplicity of administering Proclaim is key"
 JBS_ADM_SOCIALNETWORKING="Use Social Media Links"
 JBS_ADM_SOCIALNETWORKING_DESC="Show or Hide links for users to post studydetails link on social media sites (configure on Social Media tab)"
 JBS_ADM_STUDYLISTLIMIT="Study Limit in MediaFile"
