Fixed Uninstall function.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -679,7 +679,7 @@ JBS_POSTINSTALL_ACTION_TEMPLATE="Update Template Settings"
 
 ; Uninstall strings (used when the extension is uninstalled)   ; duplicate? see IBM
 JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove Proclaim Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
-JBS_INS_UNINSTALLED="Proclaim Uninstalled. Be sure to uninstall the module and plugin as well."
+JBS_INS_UNINSTALLED="Proclaim Plugins, and Models have uninstalled"
 
 ;Migration   ; duplicate? see IBM
 JBS_MIG_FINISHED="Finished"
