--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -193,6 +193,7 @@ JBS_CMN_SELECT_TEACHER="- Select a Teacher -"
 JBS_CMN_SELECT_TEMPLATE="- Select a Template -"
 JBS_CMN_SELECT_TOPIC="- Select a Topic -"
 JBS_CMN_SELECT_YEAR="- Select a Year -"
+JBS_CMN_SELECT_DIRECTION="- Select a Direction -"
 JBS_CMN_SERIES="Series"
 JBS_CMN_SERIES_DESCRIPTION="Series Description"
 JBS_CMN_SERIES_NOT_FOUND="Series not found"
@@ -268,6 +269,13 @@ JBS_CMN_PODCASTS_LIST="Podcast List"
 JBS_CMN_NO_PODCASTS="No Podcasts"
 JBS_CMN_MEDIA_RESPONSIVE="Responsive"
 JBS_CMN_LISTEN="Listen"
+
+;; Grid Sort filter
+JBSM_GRID_SORT_BY="Sort By"
+JBSM_GRID_DATE_ASC="Date ascending"
+JBSM_GRID_DATE_DESC="Date descending"
+JBSM_GRID_TITLE_ASC="Title ascending"
+JBSM_GRID_TITLE_DESC="Title descending"
 
 ;; ADM Administrator
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
