--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -718,7 +718,7 @@ JBS_POSTINSTALL_BODY_FONTAWESOME="We have updated Font Awesome to v5. We have pl
 
 ; Uninstall strings (used when the extension is uninstalled)   ; duplicate? see IBM
 JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove Proclaim Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
-JBS_INS_UNINSTALLED="Proclaim Plugins, and Models have uninstalled"
+JBS_INS_UNINSTALLED="Proclaim Plugins, and Modules have uninstalled"
 
 ;Migration   ; duplicate? see IBM
 JBS_MIG_FINISHED="Finished"
