Working on install post message

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
@@ -4,6 +4,10 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 
+; Simple Mode message
+SIMPLEMODEMESSAGE_TITLE="Simple Mode"
+SIMPLEMODEMESSAGE_BODY="This version of Proclaim! introduces Simple Mode. Simple mode provides an easier interface to enter and display messages. It is ON by default. Turn it OFF and ON in the Administration tab."
+SIMPLEMODEMESSAGE_ACTION="Go to the Administration tab and toggle Simple Mode OFF for the full featured Proclaim!"
 ; Identify the component as extension
 COM_BIBLESTUDY="Proclaim"
 
