Still working on post install messages and progress bar

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -15,6 +15,12 @@
 
 COM_BIBLESTUDY="Proclaim"
 
+; Simple Mode message
+SIMPLEMODEMESSAGE_TITLE="Simple Mode"
+SIMPLEMODEMESSAGE_BODY="This version of Proclaim! introduces Simple Mode. Simple mode provides an easier interface to enter and display messages. It is ON by default. Turn it OFF and ON in the Administration tab."
+SIMPLEMODEMESSAGE_ACTION="Go to the Administration tab and toggle Simple Mode OFF for the full featured Proclaim!"
+; Identify the component as extension
+
 ;; Permission entry and Joomla common handling
 COM_BIBLESTUDY_CONFIGURATION="Proclaim CONFIGURATION"
 COM_BIBLESTUDY_N_ITEMS_ARCHIVED="%d Item(s) Archived"
