Added language string for final step of install but I think there is a contatonation of strings at play here.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
@@ -26,6 +26,7 @@ JBS_INS_VISIT_DOCUMENTATION="Visit our Documentation Site"
 JBS_INS_VISIT_FORUM="Visit our forum with your questions"
 JBS_INS_CLICK_TO_FINISH="Click Here To Finish"
 JBS_INS_TITLE="Proclaim"
+JBS_MIGfinishED="Proclaim migration finished"
 
 ; Uninstall strings (used when the extension is uninstalled)
 JBS_INS_UNINSTALLED="Proclaim Uninstalled. Be sure to uninstall the module and plugins as well."
