#788 Fixed updating of filters and passing landing page filters. Added back hiding systems for filters. Added in Sort By Hide and Limit Hide.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -1525,6 +1525,10 @@ JBS_TPL_LISTITEMS_SHOW_SERIES_SEARCH="Show/Hide Series search"
 JBS_TPL_LISTITEMS_SHOW_SERIES_SEARCH_DESC="Shows or hides the drop down box for series"
 JBS_TPL_LISTITEMS_SHOW_TEACHER_SEARCH="Show/Hide Teacher search"
 JBS_TPL_LISTITEMS_SHOW_TEACHER_SEARCH_DESC="Shows or hides the drop down box for teachers"
+JBS_TPL_LISTITEMS_SHOW_SORTBY_SEARCH="Show/Hide Sort By search"
+JBS_TPL_LISTITEMS_SHOW_SORTBY_SEARCH_DESC="Shows or hides the drop down box for Sort By"
+JBS_TPL_LISTITEMS_SHOW_LIMIT_SEARCH="Show/Hide Limit search"
+JBS_TPL_LISTITEMS_SHOW_LIMIT_SEARCH_DESC="Shows or hides the drop down box for Limit"
 JBS_TPL_LISTITEMS_SHOW_TOP="Show at top"
 JBS_TPL_LISTITEMS_SHOW_TOPIC_SEARCH="Show/Hide Topic search"
 JBS_TPL_LISTITEMS_SHOW_TOPIC_SEARCH_DESC="Shows or hides the drop down topical list"
