Fixed Custom text in podcast episodes

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -900,7 +900,7 @@ JBS_PDC_ALTERNATE_WORDS_DESC=""
 JBS_PDC_BOOK_CHAPTER="Book + Chapter"
 JBS_PDC_EDITORS_EMAIL="Editor's Email Address"
 JBS_PDC_EDITORS_NAME="Editor's Name"
-JBS_PDC_EPISODES_CUSTOM_DESC="Use Codes and text.<br /><br /><u>CODES</u><br /><br />{scripture1} - Scripture Reference<br />{duration} - Duration<br />{studytitle} - Study Title<br />{teachername} - Teachers Name<br />{date} - Date"
+JBS_PDC_EPISODES_CUSTOM_DESC="Use Codes and text.<br /><br /><u>CODES</u><br /><br />{scripture1} - Scripture Reference<br />{scripture2} - Secondary Scripture Reference<br />{secondary} - Secondary Scripture Reference<br />{duration} - Duration<br />{studytitle} - Study Title<br />{teacher} - Teachers Name<br />{date} - Date<br />{studyintro} - Study Description<br />{location_text} - Location<br />{message_type} - Message Type<br />"
 JBS_PDC_EPISODE_DATE_SCRIPTURE_TITLE="Date + Scripture + Title"
 JBS_PDC_EPISODE_SCRIPTURE_ONLY="Scripture Only"
 JBS_PDC_EPISODE_SCRIPTURE_TITLE="Scripture + Title"
