--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -1639,7 +1639,9 @@ JBS_TPL_SERIESDISPLAY_USE_HEADER="Display a header for the series"
 JBS_TPL_SERIESDISPLAY_USE_HEADER_DESC="Choose whether or not to show a header above the series information"
 JBS_TPL_SERIESIMAGE="Series Image"
 JBS_TPL_SERIESLIST="Series List"
+JBS_TPL_SERIESDETAILSDISPLAY="Series List Display"
 JBS_TPL_SERIESTITLE="Series Title"
+JBS_TPL_SERIESDETAILSDISPLAY="Series Title Display"
 JBS_TPL_SERIES_BRACE="Series {series_text}"
 JBS_TPL_SERIES_DESCRIPTION_BRACE="Series Description {series_description}"
 JBS_TPL_SERIES_LIST_TEMPLATE="Series List Template File"
@@ -1704,6 +1706,8 @@ JBS_TPL_TABLE="TABLE"
 JBS_TPL_TABLE_OR_DIV="Wrap Code in TABLE or DIV tags?"
 JBS_TPL_TEACHERAIMGE="Teacher Image"
 JBS_TPL_TEACHERDETAIL_TEMPLATECODE="Teacher Detail Display Code"
+JBS_TPL_TEACHERDETAILS="Teacher Details"
+JBS_TPL_TEACHERDISPLAY="Teacher Details Display"
 JBS_TPL_TEACHERLIST_TEMPLATECODE="Teacher List Display Code"
 JBS_TPL_TEACHER_BRACE="Teacher {teachername}"
 JBS_TPL_TEACHER_DETAILS="Teacher Details"
