--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -1819,8 +1819,8 @@ JBS_UPLOADER_STOP_CURRENT_UPLOAD="Stop Current Upload"
 JBS_UPLOADER_STOP_UPLOAD="Stop Upload"
 
 ;; Addon Languages test
-JBS_ADDON_PROTOCOL="Protocl"
-JBS_ADDON_PROTOCOL_DESC="Protocal of the server that needs to be used. http:// or https://, Default is (http://)"
+JBS_ADDON_PROTOCOL="Protocol"
+JBS_ADDON_PROTOCOL_DESC="Protocol of the server that needs to be used. http:// or https://, Default is (http://)"
 JBS_ADDON_MEDIA_TYPE_DEF="Default Media Settings"
 JBS_ADDON_BUTTON_COLOR="Custon button color"
 JBS_ADDON_BUTTON_COLOR_DESC="Pick a color for the background of the button"
