Added a message on the cpanel to indicate Proclaim! was in Simple Mode and a link to turn it off.

--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -33,6 +33,9 @@ JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
 ;; CMN Common phrases used in several sections
 ;JBS_COM_EDIT_ITEM="Edit Item"
 ;JBS_SELECT_LANGUAGE="Select Language"    ; replaced by JOPTION_SELECT_LANGUAGE
+JBS_CPANEL_SIMPLE_MODE_ON="Proclaim! is set to Simple Mode"
+JBS_CPANEL_SIMPLE_MODE_LINK="Turn off Simple Mode under Administrative Parameters"
+JBS_CPANEL_SIMPLE_MODE_DESC="Simple mode provides an easier way to administer Proclaim! by restricting editing display choices"
 JBS_USERS="Users for Simple View"
 JBS_USERS_DESC="Choose one or more users for the simple view on the administrative side"
 JBS_CMN_SELECT_USER="Select user(s)"
