Adding fix for font awesome to the module Changed a text string to be more meaningful on the control panel

--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -832,7 +832,7 @@ JBS_MED_MEDIA_FILES="Media File Information"
 JBS_MED_MEDIA_FILES_DETAILS="Media File Details"
 JBS_MED_MEDIA_FILES_LINKER="Media File Linker"
 JBS_MED_MEDIA_FILES_SETTINGS="Media File Settings"
-JBS_MED_MEDIA_FILES_STATS="Statistics"
+JBS_MED_MEDIA_FILES_STATS="Plays/Downloads"
 JBS_MED_MEDIA_POPUPFOOTER="Popup Footer Elements"
 JBS_MED_MEDIA_POPUPMARGIN="Height Margin for Popup"
 JBS_MED_MEDIA_POPUPMARGIN_DESC="Set space above and below popup for header and footer. Affects only this file"
